[package]
name = "grpc_greeter"
version = "0.1.0"
publish = false

[lib]
doctest = false
test = false

[dependencies]
grpc            = "0.6"

protobuf        = "2"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tls-api            = "0.1.*"
tls-api-native-tls = "0.1.*"
httpbis         = "~0.7"
env_logger      = "~0.5"

[build-dependencies]
protoc-rust-grpc = "0.6"

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_client_multi"
test = false

[[bin]]
name = "greeter_server"
test = false

[[bin]]
name = "greeter_server_multi_server"
test = false
